--- a/src/TravelApp/Section/section.css
+++ b/src/TravelApp/Section/section.css
@@ -1,8 +1,9 @@
+/* Download Container Css */
 .section-3 {
     box-shadow: 0 1px 30px 0 rgba(0, 0, 0, 0.1);
     border-radius: 30px;
     background-color: #FFFFFF;
-    
+
 }
 
 .main-slider {
@@ -23,9 +24,122 @@
     box-shadow: 10px 10px 20px;
     border-radius: 10px;
     padding: 20px;
+    background-color: #FFFFFF;
 }
 
 .indflag img {
     width: 30px;
     height: 20px;
+}
+
+.pos_absolute {
+    position: absolute;
+
+}
+
+.getapp_button {
+    position: relative;
+    top: -2px;
+    left: 57px;
+    background-color: white;
+    color: #008cff;
+    font-weight: 600;
+    width: 150px;
+    padding: 4px;
+    border-color: #008cff;
+
+}
+
+/* Order Now Components Css */
+
+.stripe_div {
+    box-shadow: 0px 3px 30px rgba(13, 12, 12, 0.1);
+    border-radius: 10px;
+    background-color: #FFFFFF;
+    border: 1px solid rgb(255, 203, 202);
+    padding: 10px 0px;
+    border-left: 50px solid rgb(255, 203, 202);;
+}
+
+.fontweight{
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+/* OfferContainer */
+.sliderFoot {
+    display: flex;
+    justify-content: space-between;
+}
+
+.firstrow {
+    display: flex;
+    justify-content: space-between;
+}
+
+.boxdesign {
+    box-shadow: 0px 3px 30px rgba(13, 12, 12, 0.1);
+    border-radius: 10px;
+    background-color: #FFFFFF;
+
+}
+
+/* Slick Slider */
+.slick-slider {
+    overflow-x: hidden;
+    font-family: Arial;
+    display: block;
+    margin: 0 auto;
+}
+
+/* TravellerModal */
+.traveller_modal {
+    background-color: #fff;
+    box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.guessperson {
+    background-color: #FFFFFF;
+    box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.2);
+    width: 100%;
+
+}
+
+.apply button {
+    float: right;
+    border-radius: 45px;
+}
+.primarybtn {
+    background-image: linear-gradient(93deg, #53b2fe, #065af3);
+    box-shadow: 0 1px 7px 0 rgba(0, 0, 0, .2);
+    color: #fff;
+    text-transform: uppercase;
+    width: 120px;
+
+}
+.font12{
+    font-size: 12px;
+}
+/* DateExample */
+.datewrapper{
+    background-color: #008cff;
+}
+
+.DateInput_input {
+    font-weight: 600 !important;
+    width: 130px !important;
+    /* padding: 10px;
+    margin: 0px 10px; */
+    
+}
+.DateRangePickerInput__withBorder{
+    border: 0 !important;
+    outline: 0 !important;
+}
+.bgwhite{
+    background-color: #fff !important;
+}
+.DateInput{
+    width: 161px !important;
 }
