--- a/src/TravelApp/Footer/footer.css
+++ b/src/TravelApp/Footer/footer.css
@@ -1,22 +1,4 @@
 .footer{
-    font-size: 12px;
-}
-.top-footer{
-    background-color: #F2F2F2;
-    padding: 50px;
-}
-.makeFlex{
-    border: 4px solid rgb(255,203,202);
-}
-.travelLoan img{
-    height: 60px;
-    width: 60px;
-}
-.makeFlex{
-    display: flex;
-    justify-content: space-between;
-}
-.bottom-footer{
     display: flex;
     justify-content: space-between;
     padding: 50px;
@@ -24,13 +6,11 @@
     background-color: black;
     color: white;
 }
-.about{
-    display: flex;
-    background-color: #E7E7E7;
-}
 .content{
     font-size: 18px;
 }
+
+/* Pagiganation */
 .pagination{
 display: flex;
 justify-content: center;
