--- a/src/TravelApp/pages/pages.css
+++ b/src/TravelApp/pages/pages.css
@@ -1,32 +1,850 @@
-#banner {
-    background-image: url('city.jpg');
-    background-size: cover;
-    height: 100vh;
-}
-
-.banner-title h1 {
-    background-color: rgba(255, 255, 255, 0.8);
-    display: inline-block;
-    padding: 10px;
+/* All pages */
+*{
     margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+.backimg_banner {
+    background-image: url('back-img.webp');
+    background-size: cover;
+}
+.wrapper {
+    background-color: #F2F2F2;
 }
 
-.banner-title {
-    padding-top: 3rem;
+.font10 {
+    font-size: 10px;
 }
 
-.section-2 {
-    box-shadow: 0 1px 30px 0 rgba(0, 0, 0, 0.1);
-    border-radius: 30px;
-    padding: 0px 10px;
-    position: absolute;
-    left: 100px;
-    top:680px;
-    z-index: 1;
+.font11 {
+    font-size: 11px;
+}
+
+.font12 {
+    font-size: 12px;
+}
+
+.fontweight700 {
+    font-weight: 700;
+    color: #000000;
+}
+
+.margin-bottom {
+    margin-bottom: 20px;
+}
+
+a {
+    text-decoration: none !important
+}
+
+::placeholder {
+    color: #000000;
+}
+.wrapper1{
     background-color: #FFFFFF;
+    border-radius: 8px;
+    box-shadow: 0 1px 5px 0 rgba(0, 0, 0, .1);
+    padding: 40px 0px;
+    position: relative;
 }
-@media (max-width:780px)  {
-    .section-2{
-        display: none;
+.input_row
+{
+    border: 1px solid #e7e7e7;
+    border-radius: 10px;
+}
+.input_box{
+    background: hsla(0, 0%, 100%, .1);
+    border-right: 1px solid #e7e7e7;
+}
+.input_field{
+    background: none;
+    border: 0;
+    outline: 0;
+    font-family: var(--font-family, "Mukta", "Lato", sans-serif);
+    font-size: var(--input-value, 32px);
+    line-height: 30px;
+    font-size: 30px;
+}
+.date_input{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.latoBlack {
+    font-weight: 900;
+}
+
+.search_button button{
+    font-weight: 700;
+    font-size: 25px;
+    width: 216px;
+    line-height: 20px;
+    opacity: 1;
+    text-align: center;
+    flex-direction: row;
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    margin: 0px auto;
+    top: 295px;
+    padding: 10px;
+    background-image: linear-gradient(93deg, #53b2fe, #065af3);
+    border-radius: 300px;
+}
+.fontText {
+    color: #000000;
+}
+
+.pointer {
+    cursor: pointer;
+}
+
+.downarrow_icon {
+    font-size: 22px;
+    color: #008CFF;
+}
+
+.top_bottom_padding {
+    padding: 25px 0px;
+}
+
+/* Home Css */
+
+.home_input {
+    border: none;
+    width: 100px;
+    font-size: 18px;
+    font-weight: 700;
+    border: 0;
+    outline: 0;
+    
+}
+.slickCraousal img {
+    height: 80px;
+    width: 100px;
+}
+.paracolor {
+    background-color: #E7E7E7;
+}
+.samedesign {
+    box-shadow: 0 3px 30px 0 rgba(0, 0, 0, 0.1);
+    background-color: #fff;
+    padding: 10px 0px;
+    border-radius: 10px;
+}
+.sameimage img {
+    height: 240px;
+    width: 220px;
+    border-radius: 10px;
+}
+.main-slider{
+    overflow-wrap: initial;
+}
+.h2weight {
+    font-weight: 800;
+}
+
+.all-slider-items {
+    overflow-x: scroll;
+}
+
+.posabslute {
+    position: absolute;
+    visibility: hidden;
+}
+
+.tarvel_model .traveller_modal {
+    position: absolute;
+    top: 120px;
+    right:-80px;
+}
+
+.flight_icon img {
+    height: 22px;
+}
+
+.search_home_from {
+    background-color:#fff;
+    position: absolute;
+    top: 150px;
+    left: 13px;
+    border-radius: 5px;
+    box-shadow: 4px 4px 30px black;
+    padding: 10px;
+    height: 270px;
+    z-index: 2;
+    overflow-x: hidden;
+
+
+}
+.search_home_to {
+    background-color: #fff;
+    position: absolute;
+    top: 150px;
+    left: 290px;
+    box-shadow: 4px 4px 30px black;
+    padding: 10px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    height: 270px;
+    z-index: 2;
+
+}
+
+
+/* Hotel Page Css */
+.search_button_hotel button{
+    font-weight: 700;
+    font-size: 25px;
+    width: 216px;
+    line-height: 20px;
+    opacity: 1;
+    text-align: center;
+    flex-direction: row;
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    margin: 0px auto;
+    top: 200px;
+    padding: 10px;
+    background-image: linear-gradient(93deg, #53b2fe, #065af3);
+    border-radius: 300px;
+
+}
+
+.banner2_section {
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    box-shadow: 0px 3px 30px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    overflow: hidden;
+    position: relative;
+    background-color: #fffbf4;
+    cursor: pointer;
+    margin: 50px;
+
+}
+
+.banner2 {
+    padding: 24px 20px 14px 30px;
+
+    background-image: url(//promos.makemytrip.com/Hotels_product/Luxe/bkg-dt.png);
+}
+
+.inner_img_size img {
+    width: 220px;
+    height: 230px;
+    border-radius: 10px;
+
+}
+
+.margin_center {
+    margin: 10px;
+    width: 250px;
+}
+
+.font_20 {
+    font-size: 20px;
+    font-weight: 900;
+
+}
+
+.darkGreyText {
+    font-size: 16px;
+    margin-top: -12px;
+
+}
+
+.background_white {
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    height: 130px;
+    padding: 10px;
+    width: 220px;
+}
+
+.mmt_luxe {
+    font-size: calc(var(--font-scale, 1) * 36px);
+    font-weight: 900;
+    margin-bottom: 5px;
+    /* color: -webkit-linear-gradient(45deg, #edd287 0%, #b8860b 100%);
+    -webkit-text-fill-color: transparent; */
+;
+}
+
+.div_width_350 {
+    width: 350px;
+}
+
+.introducing {
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: 900;
+    margin-top: 5px;
+}
+
+.escape {
+    font-size: calc(var(--font-scale, 1) * 16px);
+    line-height: 24px;
+    color: #000000;
+    font-weight: 700;
+}
+
+.leran_more {
+    display: inline-flex;
+    background: linear-gradient(45deg, #edd287 0%, #b8860b 100%);
+    box-shadow: 0px 1px 7px rgba(0, 0, 0, 0.21);
+    border-radius: 64px;
+    padding: 12px 32px;
+    color: #000000;
+    font-size: calc(var(--font-scale, 1) * 14px);
+    font-weight: 900;
+    align-items: center;
+    justify-content: center;
+    margin-top: 15px;
+    text-decoration: none;
+}
+
+.main_city_wrapper {
+    border-radius: 10px;
+    box-shadow: 0 3px 30px 0 rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
+    padding: 25px 40px 40px;
+    margin: 30px 60px;
+}
+
+.city_hotel img {
+    position: relative;
+    right: 59px;
+    top: 53px;
+    border-radius: 30px;
+    height: 50px;
+    width: 50px;
+}
+
+.city_hotel {
+    position: relative;
+    left: 25px;
+    width: 300px;
+}
+
+.link_decoration {
+    text-decoration: none;
+    color: #000000;
+}
+
+.link_decoration:hover {
+    color: #008cff;
+    text-decoration: underline;
+}
+.first_line {
+    margin-top: -45px;
+}
+
+.margin_between {
+    margin: 0px 100px;
+}
+
+.font18 {
+    font-size: 18px;
+    line-height: 18px;
+    font-family: var(--bs-body-font-family);
+}
+
+.font14 {
+    font-size: 14px;
+    line-height: 16px;
+    text-overflow: ellipsis;
+    font-weight: 400;
+
+    font-family: var(--font-family);
+}
+
+.list_head {
+    font-weight: 800;
+    font-size: 18px;
+    margin: 0px 5px;
+}
+
+.new_button {
+    background-color: red;
+    border-radius: 20px;
+    color: white;
+    border: none;
+    width: 50px;
+    font-size: small;
+
+}
+
+.click_here {
+    text-decoration: none;
+}
+
+.trending_search {
+    justify-content: center;
+    margin-bottom: 0px;
+}
+
+.serach-btn {
+    top: 300px;
+}
+
+.trending_search button {
+    border: none;
+}
+
+.input_height {
+    height: 35px;
+}
+.pointer {
+    cursor: pointer;
+}
+
+.select_price {
+    font-size: 20px;
+    border: none;
+    font-weight: 700;
+    border: 0;
+    outline: 0;
+}
+.search_hotel{
+    background-color: #fff;
+    position: absolute;
+    top: 150px;
+    left: 12px;
+    box-shadow: 4px 4px 30px black;
+    padding: 10px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    height: 270px;
+    z-index: 2;
+}
+/* Homestays Pages Css */
+
+/* Holidays pages css */
+.bg_color{
+    background-color: #EAF5FF;
+}
+.search_button_holiday button{
+    font-weight: 700;
+    font-size: 25px;
+    width: 216px;
+    line-height: 20px;
+    opacity: 1;
+    text-align: center;
+    flex-direction: row;
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    margin: 0px auto;
+    top: 330px;
+    padding: 10px;
+    background-image: linear-gradient(93deg, #53b2fe, #065af3);
+    border-radius: 300px;
+}
+.modal_2 .card_design {
+    top: 30px;
+}
+.search_holidaycity_from{
+    background-color: #fff;
+    position: absolute;
+    top: 230px;
+    left: 12px;
+    box-shadow: 4px 4px 30px black;
+    padding: 10px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    height: 270px;
+    z-index: 2;
+
+}
+.search_holidaycity_to{
+    background-color: #fff;
+    position: absolute;
+    top: 230px;
+    left: 290px;
+    box-shadow: 4px 4px 30px black;
+    padding: 10px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    height: 270px;
+    z-index: 2;
+
+}
+
+
+
+.makeflex {
+    display: flex;
+}
+
+
+.li-menu {
+    align-items: center;
+    cursor: pointer;
+    display: flex;
+    flex: 1;
+    flex-shrink: 0;
+    font-size: var(--menu-subheading, 16px);
+    font-weight: 700;
+    height: 50px;
+    justify-content: center;
+    line-height: 10px;
+    position: relative;
+    margin: auto;
+}
+
+.limenu {
+    border-right: 1px solid;
+    padding: 20px 80px;
+}
+
+.iconSerach {
+    color: #008cff;
+}
+
+.search {
+    color: #008cff;
+    font-weight: 500;
+}
+
+.imgstyle img {
+    border-radius: 50%;
+    flex-shrink: 0;
+    height: 24px;
+    margin-right: 10px;
+    overflow: hidden;
+    width: 24px
+}
+
+
+.appendBottom5 {
+    margin-bottom: 5px;
+}
+
+
+
+.field-label {
+    font-weight: 400;
+    line-height: 17px;
+}
+
+.slick_track {
+    display: flex;
+}
+
+.whiteText {
+    color: white !important;
+    font-weight: 500 !important;
+}
+
+.shadow {
+    align-items: center;
+    background-color: #fff;
+    border-radius: 6px;
+    box-shadow: 0 1px 30px 0 rgba(0, 0, 0, .1);
+    display: flex;
+    padding: 16px;
+    width: 100%;
+}
+
+.bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 1000px;
+    font-size: 14px;
+}
+
+
+.cardwith img {
+    width: 280px;
+}
+
+.main-poster {
+    position: relative;
+    cursor: pointer;
+    padding: 0px 80px;
+}
+
+.poster {
+    width: 100%;
+    height: 100%;
+    border-radius: 16px;
+}
+
+.sponser {
+    position: absolute;
+    right: 130px;
+    top: 6px;
+}
+
+.slider-shadow {
+    background-color: #fff;
+    border-radius: 6px;
+    box-shadow: 0 1px 30px 0 rgba(0, 0, 0, .1);
+}
+
+.background-img {
+    background-image: url('https://hldak.mmtcdn.com/prod-s3-hld-hpcmsadmin/holidays/images/phonixImages/CategorySectionBackground.png');
+}
+
+.common-slider-main {
+    display: flex;
+    padding: 0px 100px;
+}
+
+.flex-direction {
+    flex-direction: column;
+}
+
+.holiday-card img {
+    height: 341px;
+    width: 225px;
+}
+
+.main-crausal {
+    padding: 25px;
+
+}
+
+.slick-track {
+    display: flex;
+    overflow-x: scroll;
+    overflow-y: hidden;
+}
+
+.position {
+    position: relative;
+}
+
+.crausal-content {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    z-index: 1;
+    flex-wrap: wrap;
+    color: #FFFFFF;
+    font-size: 10.5px;
+    padding-top: 140px;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    opacity: 1.0;
+}
+
+.crausal-image img {
+    border-radius: 10px;
+}
+
+.button-fix {
+    position: relative;
+}
+
+.slide-button {
+    position: absolute;
+    border-radius: 20px;
+}
+
+.slide-pre {
+    right: 180px;
+    top: 50px;
+
+}
+
+.slide-next {
+    right: 150px;
+    top: 50px
+}
+
+.main-footer {
+    display: flex;
+    padding: 0px 40px;
+}
+
+.circle-image img {
+    border-radius: 50%;
+    height: 30px;
+    width: 25px;
+}
+
+.headingpart {
+    font-size: large;
+    padding: 5px 0px;
+}
+
+.parapart {
+    font-size: small;
+}
+
+.slider_heading {
+    font-weight: 700;
+    margin-bottom: 0px;
+}
+
+.explore_holiday {
+    padding: 60px 0px;
+    font-size: 12px;
+}
+
+.explore {
+    font-size: 25px;
+    font-weight: 500;
+    margin-bottom: 0px;
+}
+
+.holidays {
+    font-size: 45px;
+    font-weight: 700;
+    color: #773D3C;
+}
+
+.content {
+    line-height: 20px;
+    font-size: 14px;
+}
+
+.login_color {
+    background-image: linear-gradient(#3A74B6, #486DB4, #7452B0);
+
+}
+
+.login_head {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.button {
+    display: flex;
+    justify-content: center;
+
+}
+
+.login_button {
+    margin-top: 20px;
+}
+
+.userdata {
+    display: flex;
+    justify-content: space-around;
+    border: 1px solid;
+    background-color: black;
+    color: white;
+    margin-bottom: 10px;
+    border-radius: 20px;
+}
+
+.login_link {
+    text-decoration: none;
+    color: black;
+}
+
+.login_link:hover {
+    text-decoration: underline;
+}
+
+.same_link:hover {
+    color: black;
+}
+/* Train page Css */
+.search_traincity_from{
+    background-color: #fff;
+    position: absolute;
+    top: 150px;
+    left: 12px;
+    box-shadow: 4px 4px 30px black;
+    padding: 10px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    height: 270px;
+    z-index: 2;
+
+}
+.search_traincity_to{
+    background-color: #fff;
+    position: absolute;
+    top: 150px;
+    left: 390px;
+    box-shadow: 4px 4px 30px black;
+    padding: 10px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    height: 270px;
+    z-index: 2;
+
+}
+.search_button_train button{
+    font-weight: 700;
+    font-size: 25px;
+    width: 216px;
+    line-height: 20px;
+    opacity: 1;
+    text-align: center;
+    flex-direction: row;
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    margin: 0px auto;
+    top: 210px;
+    padding: 10px;
+    background-image: linear-gradient(93deg, #53b2fe, #065af3);
+    border-radius: 300px;
+}
+
+@media (max-width:768px) {
+    .search_button button{
+        top: 680px;
     }
+    .input_field {
+        font-size: 16px;
+    }
+    .main-poster {
+        padding: 0px;
+    }
+    .search_button_hotel button{
+        top:470px;
+    }
+    .search_button_holiday button{
+        top:730px;
+    }
+    .search_button_train button{
+        top:360px;
+    }
+    
+} 
+@media (max-width:376px) {
+    .search_button button{
+        top: 790px;
+    }
+    .input_field {
+        font-size: 14px;
+    }
+    .main-poster {
+        padding: 0px;
+    }
+    .search_button_hotel button{
+        top:495px;
+    }
+    .search_button_holiday button{
+        top:730px;
+    }
+    .search_button_train button{
+        top:360px;
+    }
+    
+} 
+
+.active{
+    display: inline
 }
+.hidden{
+    display: none;
+}
+.datepicker{
+    border: 0;
+    outline: 0;
+    width: 140px !important;
+
+}
+
